# rexyMCP

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  REXYMCP.md  new-spinner-do-not-delete-claude.txt  rustfmt.toml
.agents/: AGENTS.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
docs/: architecture.md
docs/dev/: NEXT.md  STANDARDS.md  WORKFLOW.md  codebase-review-2026-07-07.md
docs/dev/archive/: AGENTS.md
docs/dev/milestones/M1-foundations/: README.md  phase-01-workspace-and-config.md  phase-02-ai-client.md  phase-03-health-check.md
docs/dev/milestones/M10-context-optimization/: README.md  phase-01-recoverable-output-filter.md  phase-02-structured-cargo-filter.md  phase-03-arc-a-reclaim-events.md  phase-03-superseded-read-eviction.md  phase-04-superseded-read-eviction.md  phase-05-budget-estimate-fix.md  phase-06-redundant-read-dedupe.md  phase-07-content-aware-compaction.md  phase-08a-context-efficiency-phaserun.md  phase-08b-runs-context-efficiency-columns.md  phase-08c-scorecard-context-efficiency-model-tag.md  (+2 more)
executor/: Cargo.toml
executor/src/: config.rs  error.rs  health.rs  lib.rs
executor/src/agent/: cancel.rs  command.rs  contract.rs  log.rs  metrics.rs  mod.rs  outcome.rs  progress.rs  prompt.rs  tasks.rs  tests.rs  tools.rs  verify.rs
executor/src/ai/: mod.rs  testing.rs  types.rs
executor/src/ai/backends/: openai.rs
executor/src/context/: budget.rs  compactor.rs  mod.rs  output_filter.rs  tokens.rs
executor/src/governor/: hard_fail.rs  mod.rs  scorer.rs  verifier.rs  verifier_tests.rs
executor/src/parser/: detect.rs  feedback.rs  mod.rs  score.rs  validate.rs
executor/src/parser/extract/: fenced.rs  hermes.rs  loose_json.rs  mod.rs  text.rs  xml.rs  yaml.rs
executor/src/parser/repair/: alias.rs  coerce.rs  default_fill.rs  json.rs  mod.rs  name.rs  strings.rs
executor/src/phase/: briefing.rs  mod.rs  result.rs
executor/src/security/: bash_classify.rs  mod.rs  redact.rs  scope.rs
executor/src/store/: metrics.rs  mod.rs  telemetry.rs
executor/src/store/sessions/: event.rs  jsonl.rs  mod.rs
executor/src/tools/: bash.rs  delete_file.rs  find_files.rs  mod.rs  move_file.rs  patch.rs  patch_lines.rs  read_file.rs  registry.rs  router.rs  search.rs  symbols.rs  update_task.rs  write_file.rs
executor/templates/: executor_contract.md
mcp/: Cargo.toml
mcp/src/: calibrate.rs  calibrate_governor.rs  cap.rs  costs.rs  dashboard.rs  doctor.rs  finalize.rs  harvest.rs  init.rs  jobs.rs  journal.rs  log_query.rs  main.rs  profile.rs  profile_cli.rs  resume.rs  review.rs  roots.rs  runner.rs  runs.rs  scorecard.rs  scorecard_cli.rs  scorecard_tests.rs  server.rs  server_tests.rs  status.rs  stop.rs  stop_watcher.rs  sweep.rs
mcp/src/dashboard/: event_loop.rs  filter.rs  highlight.rs  mod.rs  panels.rs  render.rs  transcript.rs
plugin/: .mcp.json  README.md  plugin.json
plugin/.claude-plugin/: marketplace.json  plugin.json
plugin/skills/architect/: SKILL.md
plugin/skills/auto/: SKILL.md
plugin/skills/dispatch/: SKILL.md
plugin/skills/escalate/: SKILL.md
plugin/skills/review/: SKILL.md
plugin/templates/: STANDARDS.md  WORKFLOW.md
(+304 files in other folders)
