[workspace]
members = ["executor", "mcp"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
