[workspace]
members = ["executor", "mcp"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.3"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
regex = "1"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
similar = "3"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
