[package]
name = "rexymcp-executor"
version.workspace = true
edition.workspace = true

[lib]
name = "executor"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
futures-util.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
