[package]
name = "rexymcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rexymcp"
path = "src/main.rs"

[dependencies]
rexymcp-executor = { path = "../executor", package = "rexymcp-executor" }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["signal"] }
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }
schemars = "1"
ratatui = "0.30"
crossterm = "0.28"

[dev-dependencies]
async-trait.workspace = true
tempfile = "3"

[lints]
workspace = true
